k8s/prod/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/co-co-gong/co-co-gong-server:ee6325870072fa53a644401a3d408fdb8deac1c1
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 8080
  selector:
    app: backend
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: co-co-gong
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`co-co-gong.zerohertz.xyz`)
      kind: Rule
      services:
        - name: backend
          port: 8080
  tls:
    certResolver: zerohertz-resolver
