k8s/prod/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: ghcr.io/co-co-gong/co-co-gong-server:46136a7f1095fb70c77391e27f753fe94187f001
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - port: 8080
  selector:
    app: server
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: co-co-gong-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`co-co-gong-prod.zerohertz.xyz`)
      kind: Rule
      services:
        - name: server
          port: 8080
  tls:
    certResolver: zerohertz-resolver
